--- a/healthu.html
+++ b/healthu.html
@@ -62,7 +62,7 @@
           <div id="project-date">September - November 2020</div>
           <div id="project-title">Designing A New Medical Experience</div>
           <div id="project-description">
-            <a target=”_blank”>Health U</a> is an app that allows customers to differentiate between COVID 19 and other types of virals. Through this app, users will be able to input their symptoms and the app will generate a repsonse that illustrates the likelihood of the specific disease.
+            <a target=”_blank”>Health U</a> is an app that allows customers to differentiate between COVID 19 and other types of virals. Through this app, users will be able to input their symptoms and the app will generate a response that illustrates the respective likelihood of the various diseases.
           </div>
     </div>
 </div>
@@ -117,10 +117,10 @@
       <div class="storyline-title">The Story</div>
       <div class="storyline-description">
         Is it a cold? Is it a flu? Is it COVID? 
-        <br>Due to rise of COVID, this year the annual flu season will start up while we’re still in the midst of the COVID-19 pandemic. The only way to truly diagnose whether you have the flu or COVID-19 is through testing. However, a lot of doctors encourage people to self-diagnose through symptoms. After my personal experience of trying to figure out if it is COVID or the common flu, I decided to create and design an app which will aid people in self-diagnosing so that they are better informed about their own health.
-        <br>For the purpose of this Knowledge Base design, I planned and executed market research, user research, prototypes, visual design to create a relaxed user experience.
+        <br>Due to the rise of COVID, this year's annual flu season will start up while we’re still in the midst of the COVID-19 pandemic. The only way to truly diagnose whether you have the flu or COVID-19 is through testing. However, a lot of doctors encourage people to self-diagnose through symptoms. After my personal experience of trying to figure out if it is COVID or the common flu, I decided to create and design an app which will aid people in self-diagnosing so that they are better informed about their own health.
+        <br>For the purpose of this Knowledge Based design, I planned and executed market research, user research, prototypes, visual design to create a relaxed user experience.
         <br><br>
-        <b>The main objectives:</b> <br><br> 1) Redesign the entire website to provide users with a smooth and pleasant experience 
+        <b>The main objectives:</b> <br><br> 1) Design the app to provide users with a smooth and pleasant experience 
         <br> 2) Apply a unique feature to stand-out from the competition
         <br> 3) Design for scalability and future feature integrations
       </div>
@@ -133,7 +133,7 @@
     <div class="small-process-title">Problem Space</div>
     <div class="main-step-title">What is the current COVID situation and why do we need this app?</div>
         <div class="step-description">
-          Since COVID-19 is a type of viral flu it shares symptoms with the common cold and flu. With the winter season, it makes matters worse because all three have overlapping symptoms. There is a need for understanding the differences so that people know when to take action and get medicial care. 
+          Since COVID-19 is a type of viral flu, it shares symptoms with the common cold and flu. During the winter season, it makes health matters worse because all three have overlapping symptoms. There is a need for understanding the differences so that people know when to take action and get medicial care. 
           <div class="step-description-img">
             <img src="img/healthu1.png" alt="animated housing imagery">
           </div>
