--- a/index.html
+++ b/index.html
@@ -210,11 +210,11 @@
                 <article id="about1b">
                     <p>Hi, nice to meet you - I'm Nehal!</p>
     
-                    <p>I'm a fourth year at University of California, Davis. Currently, I am an Experience Design Intern at Aria Communications LLC. I am also the President of Design Careers Club, where I lead the board of directors to host professional design related events and workshops, which gives me a better insight into human centered design. In the past, I have worked as a UX Intern at the UC Davis C-Stem Center, where I was a co-designer on their website re-design project.</p>
+                    <p>I'm graduating from University of California, Davis in December 2020. Currently, I am an Experience Design Intern at Aria Communications LLC. I am also the President of Design Careers Club, where I lead the board of directors to host professional design related events and workshops, which gives me a better insight into human centered design. In the past, I have worked as a UX Intern at the UC Davis C-Stem Center, where I was a co-designer on their website re-design project.</p>
 
                     <p>My design journey began when I was 8 years old and discovered Microsoft Paint. My love for visual aesthetic encouraged me to be active in the fine arts community in my high school. At the same time, my passion for entrepreneurship and respect for resourceful thinking turned into a major in Managerial Economics and fostered my engagement in multiple business organizations on campus. While I enjoyed understanding markets and policies, I wondered how I could solve real-world problems and help people. This led me to recognise the User Experience Design field where I learned the importance of a good design.</p>
 
-                    <p>Through my double-major, I combine design thinking and business skills to create an impact. I am striving to become someone with multidisciplinary perspectives who will be able to change the boundaries of human-centered design. I want the intersection of desgin, business and technology to result in a meaningful society.</p>
+                    <p>Through my double-major, I combine design thinking and business skills to create an impact. I am striving to become someone with multidisciplinary perspectives who will be able to change the boundaries of human-centered design. I want the intersection of design, business and technology to result in a meaningful society.</p>
     
                     <p style="font-size: 20px; font-weight:bold;">Let's connect!</p>
 
