--- a/cstem.html
+++ b/cstem.html
@@ -308,8 +308,10 @@
   </div>
 </div>
 
-<div class="img-break">
-  <iframe id="prototype" src="https://xd.adobe.com/embed/b0915293-d288-4707-adac-491781a9628c/" frameborder="0" allowfullscreen=""></iframe>
+<div class="prototype-break">
+  <section class="col-12 prototpye_full_column" style="padding:0;">
+    <div id="prototype_mockup" class="w-100" style="height: 1046px;"></div>
+  <iframe id="prototype" src="https://xd.adobe.com/view/4889523a-0b56-4854-84af-0ae495fcf61f-1dda/?fullscreen" frameborder="0" allowfullscreen=""></iframe></section>
 </div>
 
 
