--- a/cstem.html
+++ b/cstem.html
@@ -332,8 +332,11 @@
 			</div>
 </div>
 
-<div class="img-break">
-  <img src="img/.jpg" alt="usability testing image">
+<div class="img-breakk">
+  <img src="img/ut-cstem1.png" alt="usability testing image">
+  <img src="img/ut-cstem2.png" alt="usability testing image">
+  <img src="img/ut-cstem3.png" alt="usability testing image">
+  <img src="img/ut-cstem4.png" alt="usability testing image">
 </div>
 
 <div class="break-down-container">
