--- a/cstem.html
+++ b/cstem.html
@@ -311,7 +311,7 @@
 <div class="prototype-break">
   <section class="col-12 prototpye_full_column" style="padding:0;">
     <div id="prototype_mockup" class="w-100" style="height: 1046px;"></div>
-  <iframe id="prototype" src="https://xd.adobe.com/view/4889523a-0b56-4854-84af-0ae495fcf61f-1dda/?fullscreen" frameborder="0" allowfullscreen=""></iframe></section>
+    <iframe id="prototype" src="https://xd.adobe.com/embed/4889523a-0b56-4854-84af-0ae495fcf61f-1dda/?fullscreen" frameborder="0" allowfullscreen></iframe></section>
 </div>
 
 
