--- a/assemble.html
+++ b/assemble.html
@@ -186,11 +186,7 @@
 </div>
 
 <div class="break-down-container">
-  <div class="break-down-row">
-    <div class="break-down-row">
-      <div class="finall-gif">
-        <img src="img/flyingiphone-explored.png" alt="redesign iphone">
-      </div>
+  <div class="break-down-row">   
     <div class="break-down-text">
     <div class="break-down-title">User Pain Points</div>
     <div class="break-down-description">
@@ -200,7 +196,11 @@
         <br><b>View Names</b> - Just like in the collaborative playlist feature, the user should be able to view the songs and the names of users who added the song. 
         <br><b>Editing the Line Up</b>The users should be able to change the line up by dragging songs up/down to change their queue number.
           </div></div>
-  </div></div></div>
+  <div class="finall-gif">
+    <img src="img/flyingiphone-explored.png" alt="redesign iphone">
+  </div>
+
+</div></div>
 
 
 <div class="break-down-container">
