--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@
                     <p>Send me an <a data-mce-href="mailto:nehalj98@gmail.com" href="mailto:nehalj98@gmail.com" target="_blank" rel="noopener">  <span style="color:#d4a181; font-weight: bold;">email</span></a>, or connect with me on <a data-mce-href="https://www.linkedin.com/in/nehalj98/" href="https://www.linkedin.com/in/nehalj98/" target="_blank" rel="noopener"><span style="color:#d4a181; font-weight: bold;">LinkedIn</span></a>.</p>
 
                     <div id="resum" data-module="button">
-                        <a href="resume.pdf" target="_blank">View Resume</a>
+                        <a href="resume1.pdf" target="_blank">View Resume</a>
                     </div>
                 </article>
 
