--- a/dhousing.html
+++ b/dhousing.html
@@ -172,6 +172,7 @@
           We designed a set of new features within the website that supports a much wider range of needs. The new design takes new and returning users on a more controlled,
           personalized journey and uses unique features such as the map quick look to list view, filtering, and social features that allows users to share their likes, dislikes and even find potential roommates.
           By integrating these features and re-designing the branding, Davis Housing creates a smooth and guided experience that improves their house-searching epxerience.
+          <br>I'm proud to say that, even after completing my internship, the design vision and insights that I helped develop are still being used by Davis Housing teams today.
 				</div>
 		</div>
 		<div class="redesign-banner">
@@ -182,26 +183,36 @@
 
 <div class="break-down-container">
   <div class="break-down-heading">
-    <div class="small-text-title">How did we get there?</div>
-        <div class="storyline-title">User Research</div>
+    <div class="small-text-title">Just a few snapshots</div>
+        <div class="storyline-title">Experience</div>
   </div>
 
       <div class="break-down-row">
         <div class="final-gif">
-          <img src="images/JAPA/Prototyping/search-gif.gif" alt="search location gif">
-          <img src="images/JAPA/Prototyping/filterfinal-gif.gif" alt="filter feature gif">
-        </div>
+          <img src="img/h1.png" alt="housing website 1">
+          <img src="img/h2.png" alt="housing website 2">
+        </div>   
 
-        <div class="break-down-text">
+        <!-- <div class="break-down-text">
           <div class="break-down-title">Needs and Personas</div>
           <div class="break-down-description">
             We created user personas based on our user's needs and pain points. We got this data through a survey we distributed using our subscriber list. We emailed the survey to residents and shared the survey in classes so that we could collect varied information. Based on this data, we were able to categorize and group them into following user personas:I
           </div>
-        </div>
+        </div> -->
       </div>
+
+      <div class="break-down-row">
+        <div class="final-gif">
+          <img src="img/h3.png" alt="housing website 3">
+          <img src="img/h4.png" alt="housing website 4">
+        </div>
+
+      <!-- <div class="break-down-row">
+        <a class="back_home" href="index.html"><button type="button" class="btn btn-outline-white back_home_button">Back Home</button></a></div> -->
+        
 </div>
 
-<div class="break-down-container">
+<!-- <div class="break-down-container">
       <div class="break-down-row">
         <div class="break-down-text">
           <div class="break-down-title">Competitive Research</div>
@@ -253,20 +264,20 @@
 
 <div class="img-break">
 <img src="img/dhbreak.png" alt="japa quote img break">
-</div>
+</div> -->
 
 
-<div class="break-down-container">
+<!-- <div class="break-down-container">
 	<div class="break-down-heading">
     <div class="small-text-title">What were the next steps?</div>
     <div class="storyline-title">Ideation</div>
 	</div>
 
 			<div class="break-down-row">
-				<!-- <div class="final-gif">
+				<div class="final-gif">
 					<img src="images/JAPA/Prototyping/search-gif.gif" alt="search location gif">
 					<img src="images/JAPA/Prototyping/filterfinal-gif.gif" alt="filter feature gif">
-				</div> -->
+				</div>
         <div class="break-down-row">
           <div class="break-down-text">
             <div class="break-down-title">Information Architecture</div>
@@ -282,9 +293,9 @@
 
 <div class="break-down-container">
 			<div class="break-down-row">
-				<!-- <div class="final-gif">
+				<div class="final-gif">
 					<img src="images/JAPA/Prototyping/driver-safety-gif.gif" alt="driver safety gif">
-				</div> -->
+				</div>
 
 				<div class="break-down-text">
 					<div class="break-down-title">Wireframes</div>
@@ -307,10 +318,10 @@
 	</div>
 
 			<div class="break-down-row">
-				<!-- <div class="final-gif">
+				<div class="final-gif">
 					<img src="images/JAPA/Prototyping/search-gif.gif" alt="search location gif">
 					<img src="images/JAPA/Prototyping/filterfinal-gif.gif" alt="filter feature gif">
-				</div> -->
+				</div>
         <div class="break-down-row">
           <div class="break-down-text">
             <div class="break-down-title">Prototype</div>
@@ -326,9 +337,9 @@
 
 <div class="break-down-container">
 			<div class="break-down-row">
-				<!-- <div class="final-gif">
+				<div class="final-gif">
 					<img src="images/JAPA/Prototyping/driver-safety-gif.gif" alt="driver safety gif">
-				</div> -->
+				</div>
 
 				<div class="break-down-text">
 					<div class="break-down-title">Usability Testing</div>
@@ -359,7 +370,7 @@
         <div class="process-img">
             <img src="images/JAPA/Prototyping/iterations.png" alt="iterations overview">
         </div>
-    </div></div></div></div>
+    </div></div></div></div> -->
 
         <!-- Footer -->
         <footer class="footer navbar-light bg-light">
@@ -368,13 +379,6 @@
           <a href="mailto:nnjain@ucdavis.edu"><i class="fas fa-envelope"></i></a>
           </div>
       </footer>
-
-        <div id="back-to-top" class="back-to-top" style="display: block; opacity: 1;">
-          <a ><svg version="1.1" id="Ebene_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="53px" height="20px" viewBox="0 0 53 20" enable-background="new 0 0 53 20" xml:space="preserve">
-          <g id="Ebene_3"></g>
-          <g> <polygon points="43.886,16.221 42.697,17.687 26.5,4.731 10.303,17.688 9.114,16.221 26.5,2.312 	"></polygon></g>
-          </svg> </a>
-       </div>
         
         <!-- Custom JS -->
         <script src="script.js"></script>
