--- a/dhousing.html
+++ b/dhousing.html
@@ -192,185 +192,17 @@
           <img src="img/h1.png" alt="housing website 1">
           <img src="img/h2.png" alt="housing website 2">
         </div>   
-
-        <!-- <div class="break-down-text">
-          <div class="break-down-title">Needs and Personas</div>
-          <div class="break-down-description">
-            We created user personas based on our user's needs and pain points. We got this data through a survey we distributed using our subscriber list. We emailed the survey to residents and shared the survey in classes so that we could collect varied information. Based on this data, we were able to categorize and group them into following user personas:I
-          </div>
-        </div> -->
       </div>
 
       <div class="break-down-row">
-        <div class="final-gif">
+        <div class="final-giff">
           <img src="img/h3.png" alt="housing website 3">
           <img src="img/h4.png" alt="housing website 4">
-        </div>
+        </div></div>
 
-      <!-- <div class="break-down-row">
-        <a class="back_home" href="index.html"><button type="button" class="btn btn-outline-white back_home_button">Back Home</button></a></div> -->
-        
-</div>
-
-<!-- <div class="break-down-container">
       <div class="break-down-row">
-        <div class="break-down-text">
-          <div class="break-down-title">Competitive Research</div>
-          <div class="break-down-description">
-            Macy and I explored search bar features being used by other competitive websites. Based off of this research, we created an apartments market research master list on Google Docs. We noted down all the features and categorized them into different groups under each webite. This helped us gather data which allowed us to isolate our website's individual features.
-          </div>
-        </div>
-
-        <div class="final-gif">
-          <img src="img/h1.png" alt="housing website 1">
-          <img src="img/h2.png" alt="housing website 2">
-        </div>
-      </div>
+        <a class="back_home" href="index.html"><button type="button" class="btn btn-outline-white back_home_button">Back Home</button></a></div>
 </div>
-
-<div class="break-down-container">
-  <div class="break-down-row">
-    <div class="final-gif">
-      <img src="img/stakeholder.png" alt="stakeholder png">
-    </div>
-
-    <div class="break-down-text">
-      <div class="break-down-title">Exploratory Studies</div>
-      <div class="break-down-description">
-        Macy distributed an internal survey to understand how different stakeholders within the company – engineers, sales, product marketers – felt about search. Both of us conducted an audit and documentation of all the types of objects search surfaces to see what are all the attributes that people could be searching or filtering by.
-      </div>
-      </div>
-    </div>
-  </div>
-
-  <div class="break-down-container">
-    <div class="break-down-row">
-      <div class="break-down-text">
-        <div class="break-down-title">Strategy</div>
-        <div class="break-down-description">
-          Search and getting to information are a priority. The majority of users enjoy looking for specifics instead of browsing through all the information. We also wanted to take inspiration from the Davis Housing magazine and use methods from editorial design so that the listings base is a delight to read.
-        <br>
-        <br>
-        To further narrow the search, users can customize their preferences with the filter feature.
-        </div>
-      </div>
-
-      <div class="finall-gif">
-        <img src="img/strategy1.png" alt="strategy one png">
-        <img src="img/strategy2.png" alt="strategy two png">
-      </div>
-    </div>
-</div>
-
-<div class="img-break">
-<img src="img/dhbreak.png" alt="japa quote img break">
-</div> -->
-
-
-<!-- <div class="break-down-container">
-	<div class="break-down-heading">
-    <div class="small-text-title">What were the next steps?</div>
-    <div class="storyline-title">Ideation</div>
-	</div>
-
-			<div class="break-down-row">
-				<div class="final-gif">
-					<img src="images/JAPA/Prototyping/search-gif.gif" alt="search location gif">
-					<img src="images/JAPA/Prototyping/filterfinal-gif.gif" alt="filter feature gif">
-				</div>
-        <div class="break-down-row">
-          <div class="break-down-text">
-            <div class="break-down-title">Information Architecture</div>
-            <div class="break-down-description">
-              Since the organization of information on the website was an issue brought up in our personas, we wanted to take a look at the persona use cases and see:
-              <br><br>1. Where their final page destinations were on the sitemap
-              <br>2. What user navigation paths looked 
-          </div></div>
-        </div>
-  </div>
-</div>
-
-
-<div class="break-down-container">
-			<div class="break-down-row">
-				<div class="final-gif">
-					<img src="images/JAPA/Prototyping/driver-safety-gif.gif" alt="driver safety gif">
-				</div>
-
-				<div class="break-down-text">
-					<div class="break-down-title">Wireframes</div>
-					<div class="break-down-description">
-            After inserting, removing, and rearranging pages on the sitemap the team was able to start sketching new website layouts. As we sketched and wireframed, we explored layouts that followed existing common patterns, but also explored new features to give the design an edge.During the wireframing process, we decided that it was important to focus on the social features that allow sharing and reacting. We also incorporated a modern redesign which would reduce their cognitive load. Abiding by stylistic standards was significant to gaining the traction and audience that we wanted.
-					</div>
-				</div>
-			</div>
-</div>
-
-
-<div class="img-break">
-		<img src="images/JAPA/mid-section-img2.png" alt="japa quote img break2">
-</div>
-
-<div class="break-down-container">
-	<div class="break-down-heading">
-    <div class="small-text-title">What were the final steps?</div>
-    <div class="storyline-title">Validation</div>
-	</div>
-
-			<div class="break-down-row">
-				<div class="final-gif">
-					<img src="images/JAPA/Prototyping/search-gif.gif" alt="search location gif">
-					<img src="images/JAPA/Prototyping/filterfinal-gif.gif" alt="filter feature gif">
-				</div>
-        <div class="break-down-row">
-          <div class="break-down-text">
-            <div class="break-down-title">Prototype</div>
-            <div class="break-down-description">
-              Since the organization of information on the website was an issue brought up in our personas, we wanted to take a look at the persona use cases and see:
-              <br><br>1. Where their final page destinations were on the sitemap
-              <br>2. What user navigation paths looked 
-          </div></div>
-        </div>
-  </div>
-</div>
-
-
-<div class="break-down-container">
-			<div class="break-down-row">
-				<div class="final-gif">
-					<img src="images/JAPA/Prototyping/driver-safety-gif.gif" alt="driver safety gif">
-				</div>
-
-				<div class="break-down-text">
-					<div class="break-down-title">Usability Testing</div>
-					<div class="break-down-description">
-            After inserting, removing, and rearranging pages on the sitemap the team was able to start sketching new website layouts. As we sketched and wireframed, we explored layouts that followed existing common patterns, but also explored new features to give the design an edge.During the wireframing process, we decided that it was important to focus on the social features that allow sharing and reacting. We also incorporated a modern redesign which would reduce their cognitive load. Abiding by stylistic standards was significant to gaining the traction and audience that we wanted.
-					</div>
-				</div>
-			</div>
-</div>
-
-<div class="break-down-container">
-  <div class="break-down-heading">
-    <div class="small-text-title">What did I learn?</div>
-    <div class="storyline-title">Reflection</div>
-    <div class="break-down-row">
-    <div class="break-down-row">
-        <div class="break-down-text">
-              <div class="process-heading">The Fun Part: Iterate, Usability Tests, Repeat</div>
-              <div class="process-description">
-                  For each of our focus areas of the app, we all conducted usability testing and continued iterating until reaching the product's final forms.
-                  <br><br>
-                  I'll be focusing on what I did in this section.
-                  I built off the original app's bare bones structure and designed an interactive parking facility layout. After I went through several iterations of wireframes and mid-fidelity prototypes and
-                  incorporated feedback from the team, I prepared some high-fidelity prototypes for A/B and usability testing.
-
-              </div>
-        </div>
-        <div class="process-img">
-            <img src="images/JAPA/Prototyping/iterations.png" alt="iterations overview">
-        </div>
-    </div></div></div></div> -->
 
         <!-- Footer -->
         <footer class="footer navbar-light bg-light">
