--- a/index.html
+++ b/index.html
@@ -140,12 +140,12 @@
                     </div>
 
                     <div class="col-md-6   col-12   module_wrapper">
-                        <a class="module_link" href="healthu">
+                        <a class="module_link" href="">
                         <div class="module" data-aos="fade-up">
                             <div id="healthcave_image" class="module_image"></div>
             
                             <div class="module_description" id="healthcave_module_description" >
-                            <span class="project_module_text" id="healthcave_module_label">Health U App<br>UX Design</span>
+                            <span class="project_module_text" id="healthcave_module_label">Health U App<br>UX Design<br>In Progress</span>
                             </div>
             
                         </div>
